objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Location</label>
    <nameField>
        <label>Organization</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>