objects/Location__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <formula>IF(OR(Maximum_Capacity__c=0,Maximum_Capacity__c=null),&quot;&quot;, 
IF((ROUND(((Occupied__c/Maximum_Capacity__c)*100),2)&lt;=100), 

IMAGE( &quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15,(ROUND(((Occupied__c/Maximum_Capacity__c)*200),0)))&amp; 

IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15,(200- ROUND(((Occupied__c/Maximum_Capacity__c)*200),0)))&amp; 
TEXT(ROUND(((Occupied__c/Maximum_Capacity__c)*100),2))&amp;&quot;%&quot;, 

IMAGE( &quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15,200)&amp; 
TEXT(ROUND(((Occupied__c/Maximum_Capacity__c)*100),2))&amp;&quot;%&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupied</label>
    <type>Text</type>
</CustomField>